# Tkun

./: CMakeLists++.txt  README.md  yolo网络改进笔记.docx
3calibration_test/: CMakeLists.txt  test.cpp
C pre_exam/: main.c  main.cpp
C_pre_exam/: CMakeLists.txt  main.c  notice.md
Docker_study/: CMakeLists.txt  docker_study.sh  readme.txt  test.c
KF_predict/: CMakeLists.txt  main.cpp
KF_predict/include/: KF_test.h  find_rectangle.h  solvepnp.h
KF_predict/src/: KF_test.cpp  find_rectangle.cpp  solvepnp.cpp
KF_test/: CMakeLists.txt  findcolor_test.cpp  test.cpp  test_r.cpp  test_s.cpp
Python_Study/: car.py  classificasion.py  dictionary.py  for_programme.py  function.py  home.py  if_programme.py  list.py  make_pizza.py  notice.md  operate_list.py  pizza.py  tuple.py  users_input.py  variate.py  while_programme.py
Pytorch_Study/: lesson13_use_GPU.py  lesson15_padding&stride.py  lesson16_cannels.py  lesson17_pooling.py  lesson1_operate_data.py  lesson26_fundamental_detection.py  lesson28_transposed_convolution.py  lesson3_linear_algebra.py  lesson8_weight_decay.py  lesson9_dropout.py
Pytorch_Study/lesson10_steady/: lesson10_activate_func.py  lesson10_steady.py
Pytorch_Study/lesson11_predict_price/: lesson11_house_predict.py  submission.csv
Pytorch_Study/lesson12_pytorch_fundamental/: X-file  XY-dict  XY-file  lesson12_model_structure.py  lesson12_parameters.py  lesson12_self_defined.py  lesson12_write&read.py  net.pt
Pytorch_Study/lesson14_convolution/: lesson14_convolution_net.py
Pytorch_Study/lesson18_LeNet/: lesson18_LeNet.py
Pytorch_Study/lesson19_AlexNet/: lesson19_AlexNet.py
Pytorch_Study/lesson20_VGG/: lesson20_VGG.py
Pytorch_Study/lesson21_NIN/: lesson21_NIN.py
Pytorch_Study/lesson22_googleNet/: lesson22_googleNet.py
Pytorch_Study/lesson23_ResNet/: lesson23_ResNet.py
Pytorch_Study/lesson23_normalization/: lesson23_normalization.py
Pytorch_Study/lesson24_data_augmentation/: lesson24_data_augmentation.py
ROS2_study/: ROS2.sh
ROS2_study/src/ros2_test_client/: CMakeLists.txt
ROS2_study/src/ros2_test_client/src/: ros2_test_client.cpp
ROS2_study/src/ros2_test_service/: CMakeLists.txt
ROS2_study/src/ros2_test_service/src/: ros2_test_service.cpp
capture_test/: CMakeLists.txt  test.cpp
capture_test_plus/: test.cpp
car-openvino-original-success/: main.cpp
car-openvino-original-yolo/: CMakeLists.txt  main.cpp
car-openvino-original-yolo-s/: main.cpp
car-openvino-syncinference-sucess/: main.cpp
colcon_study/: colcon.sh
find_ball/: CMakeLists.txt  find_color.cpp  main.cpp
find_ball/.cache/clangd/index/: base_class.cpp.21DC0D40FBC65E98.idx  base_class.h.E2FB47855A6A374D.idx  base_toolkit.cpp.1DFC5A5E4BEB0F7C.idx  base_toolkit.h.391961175D519609.idx  blackboard.cpp.E0275C1CC07F1AC4.idx  blackboard.h.4A6E052229E1E0BD.idx  detect_min_ball.cpp.0FE8EB605932C18B.idx  detect_min_ball.h.89A255FE5584E5F2.idx  find_color.cpp.C4343FABC89C9B5E.idx  load_param.cpp.1EEDF5C265BD2ADF.idx  load_param.h.EECFEC624329A2A9.idx  main.cpp.75C803C52CDC10E4.idx  tdtcommon.h.FF256B1794A6CBE1.idx  tdtmsg.cpp.CD2A63C8B4764204.idx  tdtmsg.h.CE4F9961516E96A0.idx
find_ball/src/: detect_min_ball.cpp  detect_min_ball.h
openvino-asyncinfer/: main.cpp
openvino-asyncinfer-demo/: main.cpp
recursion_study/: CMakeLists.txt  test1.c  test2.c  test3.c  test4.c
round_video_test/: CMakeLists.txt  test.cpp
solvepnp_test/: CMakeLists.txt  findcolor_test.cpp  test.cpp
stomach_detect/: average_gray.txt  test.py
study_cmakelists/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
study_shell（bash）/: readme.txt  simplec.sh  study.sh  test（hello world）.sh
test/: CMakeLists.txt  Matrix.cpp  Test01_from_Kun.cpp  openvino.cpp  test01  test01.cpp  test01.out  test02.cpp
test/.cache/clangd/index/: Matrix.cpp.2F44B77B02E46501.idx  openvino.cpp.946B7D69B02CB7E3.idx
test_new_yolov8/: main.cpp
yolo_optimize_study/: main.py
yolov5-read-end/: train（important）.py
yolov5_openvino/: CMakeLists.txt  test.cpp  yolov5s.xml
yolov8-cls-test/: CMakeLists.txt  yolov8_cls_ov_infer.cpp
yolov8-cls-test/.cache/clangd/index/: yolov8_cls_ov_infer.cpp.53748023AC4D3441.idx
yolov8-openvino/: main.cpp
yolov8-openvino-demo/: main.cpp
yolov8-openvino-demo-plus/: main.cpp
yolov8-test/: =4.9.0  armor.yaml  breast.yaml  breast_plus.yaml  buff.yaml  cars-pose.yaml  cars.yaml  cars（important）.yaml  coco8-pose.yaml  detect_video.py  detect_yolov8.py  detect_yolov8_cls.py  detect_yolov8_pose.py  export_yolov8.py  mobile.pt  station.yaml  stomach.yaml  train_yolov8.py  train_yolov8_cls.py  train_yolov8_pose.py  train_yolov9.py  yolov8-cls-28.pt  yolov8-cls.yaml  yolov8-mobile.yaml  yolov8-pose-0.5.yaml  yolov8-pose.yaml  yolov8n-pose.yaml  yolov8使用说明
(+689 files in other folders)
